# aap-rag-content

./: .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Containerfile-aap  Containerfile-byok  Containerfile-embeddings  Dockerfile  Makefile  README.md  artifacts.lock.yaml  build.yaml  codecov.yml  entrypoint.sh  pdm.lock.cpu  pdm.lock.gpu  pyproject.toml  requirements-modified.txt  requirements-torch-darwin.txt  requirements-torch.txt  requirements.cpu.txt  requirements.gpu.txt  requirements.txt  rpms.in.yaml  rpms.lock.yaml  run.yaml  sonar-project.properties  ubi.repo
.github/workflows/: check-lock.yml  generate-byok-vector-db.yml  repo-sync.yml  test.yml
.tekton/: aap-rag-content-pull-request.yaml  aap-rag-content-push.yaml  aap-rag-embeddings-image-pull-request.yaml  aap-rag-embeddings-image-push.yaml  buildah-remote.yaml
aap-product-docs-plaintext/2.5/: metadata.json
aap-product-docs-plaintext/2.5/snippets/: container-upgrades.txt.__EXCLUDED__  deprecated-features.txt.__EXCLUDED__  known-issue-container-content-syncing.txt.__EXCLUDED__  snip-gateway-component-description.txt.__EXCLUDED__  snip-gw-mapping-next-steps.txt.__EXCLUDED__  snip-gw-roles-note-multiple-components.txt
aap-product-docs-plaintext/aap-clouds-latest/: README.txt.__EXCLUDED__  metadata.json
aap-product-docs-plaintext/aap-clouds-latest/aap-common/: assembly-aap-command-generator.txt.__EXCLUDED__  assembly-aap-common.txt.__EXCLUDED__  assembly-appendix-release-notes.txt.__EXCLUDED__  external-site-disclaimer.txt.__EXCLUDED__  proc-aap-generate-command-data-file.txt.__EXCLUDED__  proc-aap-list-available-playbooks.txt.__EXCLUDED__  proc-aap-playbooks.txt.__EXCLUDED__  proc-aap-populate-command-data-file.txt.__EXCLUDED__  proc-aap-pull-command-container-image.txt.__EXCLUDED__  proc-aap-run-generated-command.txt.__EXCLUDED__  ref-aap-using-playbooks.txt.__EXCLUDED__
aap-product-docs-plaintext/aap-clouds-latest/stories/: assembly-azure-access.txt.__EXCLUDED__  assembly-azure-connecting-to-aap.txt  assembly-azure-deploy.txt  assembly-azure-direct-peering.txt  assembly-azure-hub-spoke-peering.txt  assembly-azure-install-prerequisites.txt  assembly-azure-install.txt.__EXCLUDED__  assembly-azure-intro.txt  assembly-azure-network-peering.txt  assembly-azure-post-deployment-requirements.txt  assembly-azure-support.txt  assembly-azure-vwan-peering.txt  assembly-saas-aap-best-practices.txt  assembly-saas-install.txt.__EXCLUDED__  assembly-saas-intro.txt  assembly-saas-post-install-config.txt  assembly-saas-pull-push.txt  assembly-saas-service-definition.txt  assembly-saas-set-up.txt
aap-product-docs-plaintext/lightspeed-latest/: metadata.json
aap-product-docs-plaintext/lightspeed-latest/aap-common/: external-site-disclaimer.txt.__EXCLUDED__  providing-direct-documentation-feedback.txt.__EXCLUDED__
aap-product-docs-plaintext/lightspeed-latest/aap-docs/: README.txt.__EXCLUDED__
aap-product-docs-plaintext/lightspeed-latest/assemblies/: assembly-lightspeed-intro.txt  assembly_assigning-seat-licenses.txt.__EXCLUDED__  assembly_configure-code-assistant.txt  assembly_configuring-custom-models.txt  assembly_configuring-lightspeed-onpremise.txt  assembly_configuring-vscode-extension.txt  assembly_generating-playbooks.txt  assembly_logging-in-lightspeed-admin-portal.txt.__EXCLUDED__  assembly_logging-in-out-portal.txt  assembly_managing-admin-dashboard-telemetry.txt  assembly_requesting-task-recommendations.txt  assembly_setting-up-lightspeed.txt  assembly_starting-lightspeed-trial.txt  assembly_troubleshooting-lightspeed.txt  assembly_using-code-bot-for-suggestions.txt
aap-product-docs-plaintext/lightspeed-latest/modules/: con-lightspeed-about.txt  con-manage-repo-scans.txt  con_ansible-content-parser.txt  con_lightspeed-key-features.txt  con_lightspeed-process.txt  con_overview-and-best-practices.txt  con_overview-lightspeed-onpremise.txt  con_playbook-generation-best-practices.txt  con_telemetry-data-collection-notice.txt  con_training-data.txt  con_wca-key-model-id.txt  proc_add-remove-repo-from-scans.txt  proc_configure-repo-scan.txt  (+40 more)
additional_docs/: README.md  aap-2_5-authentication-transcription.txt  additional_content.txt  ansible-core.txt  ansible-navigator.txt  ansible-rulebook-CHANGELOG.txt  ansible-rulebook.txt  components_versions.txt
additional_docs/.metadata/: aap-2_5-authentication-transcription.json  additional_content.json  ansible-core.json  ansible-navigator.json  ansible-rulebook.json
byok/: README.md
byok/ansible-collection-docs/: README.md  SUMMARY.md  WHATS_NEW_AAP_2.6_BYOK.md
byok_docs/: community.hashi_vault Collection.md
byok_docs/.metadata/: community.hashi_vault Collection.json
scripts/: aem-toc-generator.md  aem-toc-generator.py  constants.py  custom_processor-aap.py  custom_processor-byok.py  custom_processor_aap.py  decrypt-mimir.sh  doc_update_with_awx_ui_routes.py  doc_update_with_ui_routes.py  download-mimir.sh  filter_text_files.py  generate_changelog.sh  generate_embeddings-aap.py  generate_embeddings-llama-stack.py  get_aap_plaintext_docs.sh  mimir-parser.py  parse_aap_docs.py  solution-guides-parser.py  split_metadata.py
scripts/asciidoctor-text/: convert-it-all-aap.py
solution-guides-plaintext/: README-AIOps-ServiceNow.md  README-AIOps-Splunk-ITSI.md  README-AIOps.md  README-EDB.md  README-IA.md  README-Instana-AIOps.md  README-Intelligent-Assistant-RHAIIS.md
solution-guides-plaintext/.metadata/: README-AIOps-ServiceNow.json  README-AIOps-Splunk-ITSI.json  README-AIOps.json  README-EDB.json  README-IA.json  README-Instana-AIOps.json  README-Intelligent-Assistant-RHAIIS.json
src/aap_rag_content/: __init__.py  document_processor.py  metadata_processor.py  utils.py
tests/: test_doc_update_with_ui_routes.py  test_llama_stack_functions.py  test_setup_llama_stack.py
tests/tests/: conftest.py  test_aem_toc_generator.py  test_custom_processor_aap.py  test_document_processor.py  test_document_processor_llama_stack.py  test_metadata_processor.py  test_mimir_parser.py  test_solution_guides_parser.py  test_utils.py  test_vector_query.py
(+17313 files in other folders)
