[tool.ruff]

# description of all rules are available on https://docs.astral.sh/ruff/rules/
lint.select = ["D", "E", "F", "W", "C", "S", "I", "TCH", "SLOT", "RUF", "C90", "N", "YTT", "ASYNC", "TRIO"]

# we need to check 'mood' of all docstrings, this needs to be enabled explicitly
lint.extend-select = ["D401"]

lint.ignore = []
lint.pydocstyle.convention = "google"

target-version = "py312"
line-length = 100

[tool.mypy]
disable_error_code = ["union-attr", "return-value", "arg-type", "import-untyped"]
ignore_missing_imports = true
mypy_path = ["src"]

# https://docs.astral.sh/uv/guides/integration/pytorch/
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project]
name = "aap-rag-content"
version = "0.1.0"
description = "RAG content for AAP chatbot"
authors = []
dependencies = [
    "aiohttp==3.13.3",  # Transient dep pinned to handle CVE
    # aiosqlite 0.22+ hangs on exit due to llama-stack not closing connections properly
    # https://github.com/llamastack/llama-stack/issues/4587
    "aiosqlite==0.22.1",
    "chardet==5.2.0",
    "cryptography==46.0.5", # Transient dep pinned to handle CVE
    "faiss-cpu==1.12",
    "filelock==3.20.3",
    "llama-stack-client==0.4.3",
    "llama-stack==0.4.3",
    "pillow==12.1.1", # Transient dep pinned to handle CVE
    "pyasn1==0.6.3",
    "python-multipart==0.0.22", # Transient dep pinned to handle CVE
    "requests==2.32.5",
    "sentence-transformers==5.2.2",
    "sqlalchemy[asyncio]==2.0.46",
    "starlette==0.52.1",  # Transient dep pinned to handle CVE
    "torch",
    "urllib3==2.6.3",  # Transient dep pinned to handle CVE
]
requires-python = "==3.12.*"
readme = "README.md"
license = {file = "LICENSE"}

[dependency-groups]
dev = [
    "black",
    "mypy",
    "ruff",
    "types-requests",
]
